Chore: 데이터베이스 스키마 수정
